[package]
name = "generic-array-storage"
version = "0.2.0"
authors = ["Diachenko Artem", "Artem 34ty804krytp92e239eku@gmail.com"]
edition = "2021"
description = "`nalgebra` storage implementation backed by `generic_array`"
documentation = "https://dzuchun.github.io/generic-array-storage/generic_array_storage/index.html"
readme = "README.md"
repository = "https://github.com/Dzuchun/generic-array-storage"
license = "GPL-3.0 license"
keywords = ["nalgebra", "typenum"]
categories = ["no-std", "no-std::no-alloc"]
exclude = [".github", ".gitignore"]

[dependencies]
generic-array = "1.2.0"
nalgebra = { version = "0.33.2", default-features = false }
typenum = { version = "1.17.0", features = ["no_std"] }

[dev-dependencies]
nalgebra = { version = "0.33.2" }

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
